# mcp-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md
.github/workflows/: tests.yml
deploy/systemd/: mcp-apikeys.service  mcp-filesystem.service  mcp-gatekeeper.service  mcp-heartbeat-collect.service  mcp-heartbeat-collect.timer  mcp-heartbeat.service  (+3 more)
docs/: README.md  apikeys-server.md  heartbeat-status-schema.md  lab-research-server.md  lab-search-server.md  monitor-design.md  proposal.md
mcp-gatekeeper/: .gitignore  README.md  ruff.toml  set-rbac.sh
memory-gateway/: .gitignore  README.md  health_check.py  pyproject.toml  pytest.ini  run.py
memory-gateway/docs/: AGENT_ONBOARDING.md
memory-gateway/memory_gateway/: __init__.py  config.py  logger.py  search.py  server.py
memory-gateway/systemd/: alm-sync-incremental.service  alm-sync-incremental.timer  alm-sync-rebuild.service  alm-sync-rebuild.timer  memory-gateway-health.service  memory-gateway-health.timer  memory-gateway.service  run-sync.sh
memory-gateway/tests/: test_cache.py  test_contract.py  test_fusion.py  test_p4.py  test_search.py  test_server.py
memory-gateway/tests/gold/: eval_harness.py  gold_set.json
scripts/: mcp-verify.py
searxng-gateway/: README.md  pyproject.toml  run.py
searxng-gateway/searxng_gateway/: __init__.py  config.py  server.py
searxng-gateway/tests/: test_deep_research_fusion.py  test_server.py
tests/: test_lab_monitor.py  test_lab_research_server.py  test_lab_search_server.py  test_mcp_tools.py  test_memory_server.py  test_placeholder.py
(+45 files in other folders)
