[project]
name = "searxng-gateway"
version = "0.1.0"
description = "MCP SearXNG Gateway for LabDoctorM — web search for agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.20",
    "requests>=2.28",
]

[project.scripts]
searxng-gateway = "searxng_gateway.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["searxng_gateway"]
